--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <section class="education">
             <br/><br/>
             <h2>Education</h2>
-            <p>Sep 2022 - May 2025<br>Kingston School of Art: BA (Hons) Fine Art - <i>result pending</i></p>
-            <p>Sep 2021 - May 2022<br>Central Academy of Fine Arts: International Foundation Course</p>
+            <p>Sep 2022 - May 2025<br/>Kingston School of Art: BA (Hons) Fine Art - <i>result pending</i></p>
+            <p>Sep 2021 - May 2022<br/>Central Academy of Fine Arts: International Foundation Course</p>
         </section>
 
         <section class="exhibitions">
