--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <section class="exhibitions">
             <br/>
             <h2>Exhibitions (Group shows)</h2>
-            <p>14 Dec, 2023</p>
-            <p>Publication as Exhibition: Stanley Picker Gallery, Kingston Upon Thames</p>
-            <p>17 Oct, 2023</p>
-            <p>Bursary Award Pop Show: Kingston University</p>
-            <p>29 Nov - 1 Dec, 2022</p>
-            <p>Collision, Collaboration, Collusion: The Swan, Kingston Upon Thames</p>
-            <p>14 May - 14 July, 2021</p>
-            <p>身材焦虑主题展(Exhibition about Body Shaming): Shanghai Himalayas Museum, China</p>
+            <p>14 Dec, 2023<br/>
+            Publication as Exhibition: Stanley Picker Gallery, Kingston Upon Thames</p>
+            <p>17 Oct, 2023<br/>
+            Bursary Award Pop Show: Kingston University</p>
+            <p>29 Nov - 1 Dec, 2022<br/>
+            Collision, Collaboration, Collusion: The Swan, Kingston Upon Thames</p>
+            <p>14 May - 14 July, 2021<br/>
+            身材焦虑主题展(Exhibition about Body Shaming): Shanghai Himalayas Museum, China</p>
         </section>
 
         <section class="workshops">
